<resources>
    //Title
    <string name="app_name">Mood Predictor</string>

    //Navigation Bar
    <string name="history">History</string>
    <string name="set_locations">Add Locations</string>
    <string name="change_locations">Edit Locations</string>
    <string name="Home">Home</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    //Home Page
    <string name="Current_Mood">Current Mood Estimation:</string>
    <string name="Current_Mood_Prediction">Current Mood Prediction(PH)</string>
    <string name="steps_today">Steps</string>
    <string name="steps">step count(PH)</string>
    <string name="screen_on_time">Screen on Time:</string>
    <string name="screenTime">Screen Time (PH)</string>

    //Map
    <string name="title_activity_maps">Map</string>

    //Settings
    <string name="name">Name:</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="x">X</string>
    <string name="shakes_today">Jitteriness </string>
    <string name="refresh">Refresh</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_history">Location History</string>


</resources>