<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/Home" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_add_location_24"
            android:title="@string/set_locations" />

        <item
            android:id="@+id/nav_listloc"
            android:icon="@drawable/ic_baseline_edit_location_24"
            android:title="@string/change_locations"/>

        <item
            android:id="@+id/nav_steps"
            android:icon="@drawable/ic_baseline_directions_walk_24"
            android:title="@string/history" />


        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>



    </group>



</menu>