<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"

    <TextView
        android:id="@+id/moodpredictTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Current_Mood"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/TextMoodPredict"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_today"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="200dp"
        />

    <TextView
        android:id="@+id/numSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="-100dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shakes_today"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="250dp"
        />

    <TextView
        android:id="@+id/numShake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="-100dp"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_on_time"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="400dp"
        />


    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginEnd="-75dp"
        android:layout_marginTop="90dp"
        android:id="@+id/timer"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/how_are_you_today"
        android:id="@+id/set_mood"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:text="@string/refresh"
        android:id="@+id/refresh"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:text="Predict Mood"
        android:id="@+id/buttonPredictMood"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navi_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/home_navi" />





</FrameLayout>